# gvec

./: .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  NOTES_MERGE.md  README.md  README_CI.md  conftest.py  f90wrap_kind_map.py  gitlab_helpers.py  gitlab_regressions.py  gitlab_shortruns.py  pyproject.toml
CI_setup/: MPCDF_setup_gnu  MPCDF_setup_gnu_mpi  MPCDF_setup_intel  MPCDF_setup_intel_mpi  mpcdf_setup_intel  mpcdfcirunner_setup_gfortran  mpcdfcirunner_setup_gfortran-openmpi  mpcdfcirunner_setup_gnu  mpcdfcirunner_setup_gnu_mpi  mpcdfcirunner_setup_ifort  mpcdfcirunner_setup_ifort-impi  mpcdfcirunner_setup_ifx  mpcdfcirunner_setup_ifx-impi  mpcdfcirunner_setup_intel  mpcdfcirunner_setup_intel_mpi  mpcdfcirunner_setup_intel_mpiifort  mpcdfcirunner_setup_nvfortran  mpcdfcirunner_setup_nvidia  raven_setup_gfortran  raven_setup_gfortran-13  raven_setup_gfortran-openmpi  raven_setup_gfortran-openmpi-13  raven_setup_gnu  raven_setup_gnu_mpi  raven_setup_ifort  raven_setup_ifort-impi  raven_setup_ifx  raven_setup_ifx-2025  raven_setup_intel  raven_setup_intel_mpi  raven_setup_intel_mpiifort  raven_setup_nvfortran  raven_setup_nvfortran-23  raven_setup_nvidia  sharedrunner_setup_gnu  sharedrunner_setup_gnu_mpi  sharedrunner_setup_intel  testimony_setup_gnu  testimony_setup_intel  testimony_setup_intel_mpi  (+6 more)
CI_templates/: build-pip.yml  build.yml  converters.yml  env.yml  helpers.bash  pages.yml  postprocessing.yml  pre-commit.yml  publish.yml  pypi.yml  regression-cmp.yml  regression-hst.yml  regression-mpi.yml  regression-omp.yml  regression-tag-post-diff.yml  regression-tag.yml  regression.yml  run.yml  scripts.yml  unit.yml
cmake/: GVECConfig.cmake.in  install_gene.cmake
docs/: Makefile  conf.py  dev.md  ford.md  index.md  index.rst  pipeline.md  requirements.txt  testing.md
docs/dev/: docs.md  index.md  pipeline.md  python.md  testing.md
docs/ford/: ford.md
docs/ford/static/: index.md
docs/generators/: generate_parameter_list.py  gvec_coordinates.odg  mappings.odg  param_dict_to_doc.ipynb  parameters.yaml  pygvec_flowchart.odg
docs/static/: CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  README.md  custom.css  index.md  param_dict_to_doc.ipynb  references.bib  version-switcher.json
docs/templates/: version.html
docs/user/: cas3d.md  coordinate-conventions.md  getting-started.md  gvec-parameter-list.md  gvec_to_cas3d.md  index.md  install.md  minimizer-parameters.md  other-interfaces.md  python.md  quasr.md  theory.md
ford-config/: README.md  project.md
python/examples/: boozer.ipynb  visu.ipynb
python/examples/bspline_profiles/: b_spline_profiles_example.ipynb  parameter.ini
python/gvec/: __init__.py  _xr2vtk.py  comp.py  fourier.py  gvec_to_cas3d.py  post.py  quantities.py  run.py  state.py  surface.py  util.py  vtk.py
python/pygvec/: __init__.py  post.py  quantities.py
src/: basis.f90  basis1d.f90  convert_gvec_to_castor3d.f90  convert_gvec_to_jorek.f90  defines.h  gvec.f90  gvec_post.f90  io_netcdf.f90  perf2ftimings.f90  perfdummy.f90  rungvec.f90  test_evalgvec.f90  test_gvec_to_gene.f90  test_gvec_to_hopr.f90
src/analyze/: analyze.f90  analyze_vars.f90
src/base/: base.f90  basis1d.f90  cubic_spline.f90  fbase.f90  polytobspl.f90  rprofile.f90  sbase.f90  sbase_vars.f90  spline_profile.f90  splprofile.f90
src/bsplines/: sll_m_spline_matrix.f90  sll_m_spline_matrix_dense.f90
src/eval_gvec/: eval_gvec.f90  eval_gvec_vars.f90
src/functionals/: c_functional.f90  c_sol_var.f90  functional.f90
src/globals/: cla.f90  globals.f90  linalg.f90  mod_mpi.f90  newton.f90  readintools.f90
src/grid/: sgrid.f90  sgrid_vars.f90
src/gvec_to_castor3d/: gvec_to_castor3d.f90  gvec_to_castor3d_vars.f90
src/gvec_to_gene/: __init__.py  gvec_to_gene.f90  gvec_to_gene.h  gvec_to_gene_c_bind.f90  gvec_to_gene_vars.f90  test.py
src/gvec_to_hopr/: gvec_to_hopr.f90  gvec_to_hopr_vars.f90
src/gvec_to_jorek/: get_field_base.f90  gvec_to_jorek.f90  gvec_to_jorek_vars.f90
src/hmap/: c_hmap.f90  hmap.f90  hmap_RZ.f90  hmap_RphiZ.f90  hmap_axisNB.f90  hmap_cyl.f90  hmap_frenet.f90  hmap_knot.f90
src/lbfgsb/: lbfgsb.f
src/mhdeq/: mhdeq.f90  mhdeq_tools.f90  mhdeq_vars.f90  newton.f90
src/output/: output.f90  output_csv.f90  output_netcdf.f90  output_vars.f90  output_vtk.f90  write_modes.f90
src/profiles/: c_rprofile.f90  rprofile_polynomial.f90
src/pygvec/: binding.f90  post.f90  run.f90
src/readstate/: boundaryFromFile.f90  readstate.f90  readstate_vars.f90
src/restart/: restart.f90  restart_vars.f90
src/sbase/: sbase.f90  sbase_vars.f90
src/sgrid/: sgrid.f90  sgrid_vars.f90
src/transform_sfl/: get_boozer.f90  sfl_boozer.f90  transform_sfl.f90  transform_sfl_vars.f90
src/vmec/: track_spline1_mod.f90  vmec.f90  vmec_lambda.f90  vmec_readin.f90  vmec_vars.f90
template/: template.f90  template_vars.f90
test-CI/: README-CI.md  README.md  conftest.py  gvec_shortrun.ini  gvec_shortrun_restart.ini  helpers.py  test_all.py  test_examples.py  test_sample.py
test-CI/data/: 2022_QH_nfp7.nc  N2-63.nc  N2.12-v3.1-hi.nc  N2.12-v3.1-lo.nc  N3.471-v3.1-lo.nc  N3.Knot-v3.1-lo.nc  README.md  gvec_boundary_tilted_elliptok_RZ_mb_nt_41_nz_41.nc  input.d23p4_tm  input.test-signgs-neg-asymF  input.test-signgs-neg-asymT  input.test-signgs-pos-asymF  input.test-signgs-pos-asymT  quasr-0112714-boundary.nc  quasr-0112714.json  wout_test-signgs-neg-asymF.nc  wout_test-signgs-neg-asymT.nc  wout_test-signgs-pos-asymF.nc  wout_test-signgs-pos-asymT.nc
test-CI/test_gvec/: test_gvec.py
test-CI/unit-pygvec/: conftest.py  test_compute.py  test_fourier.py  test_profiles.py  test_pygvec.py  test_scripts.py  test_state.py  test_surface.py  test_util.py
tests/: README.md  parameter_test.ini  parameter_test_restart.ini  parameter_test_stell.ini  runtests.sh
tools/: pygvec_performance.ipynb
tools/diff_state_visu/: diff_state_visu.ipynb
tools/pyQSC/: convert_pyQSC_to_ncfile.py  testing.ipynb
tools/sympy/: axis_limits.ipynb
(+115 files in other folders)
